--- a/src/utils/styles/rating.scss
+++ b/src/utils/styles/rating.scss
@@ -7,9 +7,14 @@
     align-items: center;
     margin-top: 27px;
     &__star {
-        fill: $maincolor;
         width: 24.75px;
         height: 24px;
         margin-left: 12px;
+        &--empty {
+            fill: lightgrey;
+        }
+        &--full {
+            fill: $maincolor;
+        }
     }
 }
